lib/lock_free/nohup.out
queue.cpp: In member function ‘virtual void* lyy::LockFreeQueue::get()’:
queue.cpp:57:58: error: incompatible type for argument 1 of ‘__sync_bool_compare_and_swap’
     } while (CAS(_head_tail, old_head_tail, new_head_tail));
                                                          ^
queue.cpp:61:60: error: incompatible type for argument 1 of ‘__sync_bool_compare_and_swap’
     } while (CAS(node->status, STATUS_READY,STATUS_REMOVING));
                                                            ^
queue.cpp: In member function ‘virtual void lyy::LockFreeQueue::put(void*)’:
queue.cpp:86:58: error: incompatible type for argument 1 of ‘__sync_bool_compare_and_swap’
     } while (CAS(_head_tail, old_head_tail, new_head_tail));
                                                          ^
queue.cpp:90:58: error: incompatible type for argument 1 of ‘__sync_bool_compare_and_swap’
     } while (CAS(node->status, STATUS_IDLE, STATUS_ADDING));
                                                          ^
queue.cpp:93:12: error: return-statement with a value, in function returning 'void' [-fpermissive]
     return ptr;
            ^
